third_party/blink/web_tests/external/wpt/resource-timing/idlharness.any-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
PASS Partial interface Performance: original interface defined
PASS PerformanceResourceTiming interface: existence and properties of interface object
PASS PerformanceResourceTiming interface object length
PASS PerformanceResourceTiming interface object name
PASS PerformanceResourceTiming interface: existence and properties of interface prototype object
PASS PerformanceResourceTiming interface: existence and properties of interface prototype object's "constructor" property
PASS PerformanceResourceTiming interface: existence and properties of interface prototype object's @@unscopables property
PASS PerformanceResourceTiming interface: attribute initiatorType
PASS PerformanceResourceTiming interface: attribute nextHopProtocol
PASS PerformanceResourceTiming interface: attribute workerStart
PASS PerformanceResourceTiming interface: attribute redirectStart
PASS PerformanceResourceTiming interface: attribute redirectEnd
PASS PerformanceResourceTiming interface: attribute fetchStart
PASS PerformanceResourceTiming interface: attribute domainLookupStart
PASS PerformanceResourceTiming interface: attribute domainLookupEnd
PASS PerformanceResourceTiming interface: attribute connectStart
PASS PerformanceResourceTiming interface: attribute connectEnd
PASS PerformanceResourceTiming interface: attribute secureConnectionStart
PASS PerformanceResourceTiming interface: attribute requestStart
PASS PerformanceResourceTiming interface: attribute responseStart
PASS PerformanceResourceTiming interface: attribute responseEnd
PASS PerformanceResourceTiming interface: attribute transferSize
PASS PerformanceResourceTiming interface: attribute encodedBodySize
PASS PerformanceResourceTiming interface: attribute decodedBodySize
PASS PerformanceResourceTiming interface: operation toJSON()
PASS Performance interface: operation clearResourceTimings()
PASS Performance interface: operation setResourceTimingBufferSize(unsigned long)
PASS Performance interface: attribute onresourcetimingbufferfull
Harness: the test ran to completion.

